Fixed setup php errors and version number

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-/lib/config/config.drupal.php
-/lib/config/config.eqdkp.php
-/lib/config/config.jml3.php
-/lib/config/config.joomla3.php
-/lib/config/config.mybb.php
-/lib/config/config.php
-/lib/config/config.phpbb3.php
-/lib/config/config.smf.php
-/lib/config/config.vanilla.php
-/lib/config/config.vb3.php
-/lib/config/config.wp.php
-/lib/config/config.wbb.php
+/lib/config/config*.php
 /tags
-
 .DS_Store
-
 lib/config/key.google.p12
